# challenge_airbnb

./: .gitignore  README.md  pyproject.toml
config/: settings.py
tweets/: admin.py  models.py  serializer.py  urls.py  views.py
tweets/templates/: all_tweets.html
users/: serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
